# some-weird-benchmark

./: Cargo.toml  README.md
benches/: my_benchmark.rs
src/: main.rs
