[package]
name = "lines40k"
version = "0.1.0"
authors = ["Sergey Mishin <kezvision@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
